# tydi-rust

./: .gitignore  Cargo.toml  README.md  posts.json
src/: binary.rs  drilling.rs  lib.rs  main.rs
tydi_derive_core/: Cargo.toml
tydi_derive_core/src/: lib.rs  tests.rs
tydi_derive_macro/: Cargo.toml
tydi_derive_macro/src/: lib.rs
