[package]
name = "rust-tydi-packages"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["tydi_derive_core", "tydi_derive_macro"]

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.23"
chrono = { version = "0.4", features = ["serde"] }
